# palmsens-ui

./: README.md  app_style.py  aurora_builder.py  aurora_method_builder_app.py  aurora_methods.py  bdf_export.py  device_helpers.py  graph.py  main.py  makefile  measurement_data.py  method_config.py  method_worker.py  ps_helpers.py  pyproject.toml
aurora_app/: aurora_method_builder_app.py  aurora_methods.py
bdfplot/: battery_plotter.py  battery_plotter_requirements.txt
shared/palmsens-aurora-workflow/: pyproject.toml
shared/palmsens-aurora-workflow/src/palmsens_aurora_workflow/: __init__.py  visual.py  workflow.py
shared/palmsens-aurora-workflow/tests/: __init__.py  test_shared_workflow.py
src/: app_style.py  bdf_export.py  device_helpers.py  graph.py  main.py  measurement_data.py  method_config.py  method_worker.py
src/aurora_app/: aurora_builder.py  aurora_method_builder_app.py  aurora_methods.py  aurora_methodscript_export_dialog.py
src/temperature_chamber/: temperature_controller.py
tests/: test_shared_builder_integration.py  test_shared_workflow_equivalence.py
