[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palmsens-ui"
version = "0.1.0"
dependencies = [
	"PySide6",
	"PyPalmSens",
	"pyqtgraph",
	"pandas"
	"batterydf"
]

[tool.setuptools]
py-modules = ["main", "ps_helpers", "bdf_export.py", "method_config.py", "method_worker.py"]
