[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palmsens-ui"
version = "0.1.0"
dependencies = [
	"PySide6",
	"PyPalmSens",
	"pyqtgraph",
	"pandas",
	"batterydf",
	"aurora-unicycler"
]

[tool.uv.sources]
aurora-unicycler = { path = "./aurora-unicycler", editable = true }

[tool.setuptools]
py-modules = ["main", "ps_helpers", "bdf_export", "measurement_data", "method_config", "method_worker", "aurora_builder", "aurora_methods", "aurora_method_builder_app", "app_style"]
