[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palmsens-ui"
version = "0.1.0"
dependencies = [
	"PySide6",
	"PyPalmSens",
	"pyqtgraph",
	"pandas",
	"batterydf",
	"aurora-unicycler",
	"pyserial"
]

[tool.uv.sources]
aurora-unicycler = { path = "./aurora-unicycler", editable = true }

[tool.setuptools.packages.find]
include = ["src*"]
